--- a/style.css
+++ b/style.css
@@ -6,24 +6,21 @@ body{
   padding: 0px;
 }
 
-.encabezado1 {
-  background-color: black;
-  height: 100px;
-  margin: 0px;
-  padding: 0px;
-  width: 100%;
-  border: 0.5px white;
-}
 .container{
   width: 100%;
 }
 
+.encabezado1 {
+  background-color: black;
+  height: 100px;
+  width: 100%;
+  border: 0.5px white;
+  display: flex;
+  flex-direction: row;
+}
 
 .ingresaryregistrar {
   color: white;
-  float: right;
-  margin-right: 60px;
-  margin-top: 70px;
   font-size: 120%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
   Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -31,14 +28,8 @@ body{
 
 .imagenlogo {
   text-align: left;
-  float: left;
-  margin: -90px 0px 60px 30px;
 }
 
-.barrainicio {
-  width: 100%;
-  height: 80px;
-}
 
 .iniciohorizontal{
   list-style:none;
@@ -67,7 +58,6 @@ body{
   position: absolute;
   display: none;
   list-style:none;
-  width: 200px;
   background-color: rgba(0, 0, 0, 0.832);
 }
 
@@ -88,7 +78,6 @@ body{
   position: absolute;
   display: none;
   list-style:none;
-  width: 100px;
   background-color: rgba(240, 234, 71, 0.832);
 }
 
@@ -113,7 +102,6 @@ body{
   position: absolute;
   display: none;
   list-style:none;
-  width: 100px;
   background-color: rgba(240, 234, 71, 0.832);
 }
 
@@ -137,7 +125,6 @@ body{
 .backgroundimage2{
   background-image: url(./images/cocina1.jpg);
   background-size: cover;
-  height: 400px;
   width: 100%;
   box-shadow: -10px 10px 20px 2px rgba(0, 0, 0, 0.849);  
   border: 1.5px solid rgb(95, 70, 42);
@@ -145,7 +132,6 @@ body{
 
 .encabezadoRecetario{
   width: 100%;
-  height: 120px;
   background-size: cover;
   background-image: url(./images/tablon.jpeg);
   background-repeat: no-repeat;
@@ -153,7 +139,6 @@ body{
   border: 1.5px solid rgb(95, 70, 42);
 }
 .textoRecetario{
-  margin-top: 0px;
   color: white;
   font-size: 60px;
   text-align: center;
@@ -161,59 +146,55 @@ body{
   text-shadow: rgb(126, 119, 45) 2px 2px 2px;
 }
 
-.contenido{
-  font-size: 13px;
-  padding: 12px;
-  justify-content: flex-start;
-  box-sizing: border-box;
+
+.cuerditas2{
+  margin: 0 auto;
+  filter: drop-shadow(-5px 0px 7px #000000ea);
+  z-index: -2;
+  width: 100%;
+  margin-bottom: -4px;  
 }
 
 .receta {
-  font-size: 15px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     text-shadow: rgb(102, 102, 16) 1px 1px 1px;
   background-color: rgb(14, 14, 14);
   box-shadow: -10px 10px 20px 2px black;
   color: rgb(250, 240, 101);
-  width:90%;
-  height: 530px;
   display: flex;
   left: 20px;
   position: relative;
   bottom: -30px;
 }
 
-
-
-.imagenes2 {
-  position: relative; 
-   float: left; 
-  z-index: 5;
-  margin-top: -82%;
-}
-
 .tituloReceta {
-  font-size: 40px;
   font-family: "New Tegomin", serif;
   background-color: yellow;
-/*   background-size: 506px;
- */  position: relative;
+  position: relative;
   z-index: 0;
   margin: 0px;
   padding: 0%;
   text-align: center;
   text-shadow: rgb(109, 109, 33) 3px 3px 3px;
   color: black;
-    width: 100%;
-    height: 100%;
-    
-  }
+  width: 100%;
+  
+}
 
-.imagenfondo2{
-  margin-top: 5%;
-  margin-left: 20%;
-}  
+.imagenes2 {
+  position: relative; 
+  float: left;
+  z-index: 5;
+}
+
+  
+.contenido{
+  font-size: 13px;
+  padding: 12px;
+  justify-content: flex-start;
+  box-sizing: border-box;
+}
 
 .casita{
 /* position: relative; */
@@ -227,7 +208,6 @@ align-items: center;
 
  .tablones2 {
   width:100%;
-  height: 600px;
   background-image: url(./images/tablon.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -236,23 +216,7 @@ align-items: center;
   border: 1.5px solid rgb(95, 70, 42);
 } 
 
-.cuerditas{
- margin: 0 auto;
- filter: drop-shadow(-5px 0px 7px #000000ea);
- z-index: -2;
- width: 100%;
-  height: 150px;
-  margin-bottom: -4px;
-}
-.cuerditas2{
-  margin: 0 auto;
-  filter: drop-shadow(-5px 0px 7px #000000ea);
-  z-index: -2;
-  width: 100%;
-   height: 150px;
-   margin-bottom: -4px;
-   
-}
+
 .vacio {
   width: 100%;
   opacity: 20%;
@@ -265,234 +229,429 @@ align-items: center;
   
 }
 
-.piePagina{
+
+
+@media only screen and (max-width:600px) {
+
+.ingresaryregistrar{
+  width: 40%;
+  margin-right: 40px;
+
+}
+.barrainicio{
+  height: 70px;
+  position: relative;
+}
+
+.barrainicio .iniciohorizontal{
   width: 100%;
-  background-color: black;
-  height: 100px;
-}
-.pie1{
-  color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  right: 10px;
 }
 
-@media  screen and (max-width:700px) {
+.iniciohorizontal li{
+  font-size: 25px;
+  margin-left: 10px;
+}
 
-  .receta{
+.menu-vertical{
+  width: 30%;
+  height: 30%;
+}
+
+.menu-vertical li a{
+  font-size: 20px;
+}
+
+.ingredientes-barra{
+  width: 20%;
+}
+
+.ingredientes-barra li{
+  font-size: 20px;
+}
+
+.autores{
+  width: 20%;
+}
+
+.autores li{
+  font-size: 20px;
+}
+
+.backgroundimage2{
+  width: 100%;
+  height: 250px;
+  display: flex;
+  align-items: center;
+}
+
+.imagenfondo2{
+  margin-left: 25%;
+}
+
+.vacio{
+  width: 100%;
+}
+
+.encabezadoRecetario{
+  width: 100%;
+  height: 120px;
+}
+
+.textoRecetario{
+  font-size: 40px;
+}
+
+.tablones2 {
+  width: 100%;
+  height: 900px;
+} 
+
+.receta{
+  width: 90%;
+  height: 700px;
+} 
+
+.titulo-imagen{
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20%;
+  
+}
+
+.tituloReceta{
+  width: 85%;
+  margin-top: 50px;
+  padding-bottom: 20px;
+  font-size: 30px;
+}
+
+.imagenes2{
+  width: 85%;
+  height: auto;
+
+}
+
+.contenido{
+  width: 100%;
+  font-size: 15px;
+  align-self: center;
+} 
+
+.casita{ 
+  width: 20%;
+}
+
+.imagenfondo2{
+  width: 50%;
+}
+
+.imagenlogo {
+   width: 100%;
+}
+
+.encabezado1{
+  width: 100%;
+}
+  
+.cuerditas2{
+  width: 100%;
+}
+
+.ingresaryregistrar{
+  width: 28%;
+}
+
+.imagenlogo{
+  width: 100%;
+} 
+}
+
+@media only screen and (min-width:600px) {
+
+  .ingresaryregistrar{
+    width: 40%;
+    margin-right: 40px;
+  
+  }
+  .barrainicio{
+    height: 70px;
+    position: relative;
+  }
+  
+  .barrainicio .iniciohorizontal{
     width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    right: 10px;
+  }
+  
+  .iniciohorizontal li{
+    font-size: 25px;
+    margin-left: 10px;
+  }
+  
+  .menu-vertical{
+    width: 30%;
+    height: 30%;
+  }
+  
+  .menu-vertical li a{
+    font-size: 20px;
+  }
+  
+  .ingredientes-barra{
+    width: 20%;
+  }
+  
+  .ingredientes-barra li{
+    font-size: 20px;
+  }
+  
+  .autores{
+    width: 20%;
+  }
+  
+  .autores li{
+    font-size: 20px;
+  }
+  
+  .backgroundimage2{
+    width: 100%;
+    height: 250px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .imagenfondo2{
+    margin-left: 25%;
+  }
+  
+  .vacio{
+    width: 100%;
+  }
+  
+  .encabezadoRecetario{
+    width: 100%;
+    height: 120px;
+  }
+  
+  .textoRecetario{
+    font-size: 40px;
+  }
+  
+  .tablones2 {
+    width: 100%;
+    height: 900px;
   } 
+  
+  .receta{
+    width: 90%;
+    height: 700px;
+    margin-left: 20px;
+  } 
+  
+  .titulo-imagen{
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20%;
+    
+  }
   
   .tituloReceta{
     width: 85%;
+    margin-top: 50px;
+    padding-bottom: 20px;
+    font-size: 30px;
   }
-  .contenido{
-    width: 100%;
-    font-size: 9px;
-   } 
+  
   .imagenes2{
     width: 85%;
     height: auto;
+  
+  }
+  
+  .contenido{
+    width: 100%;
+    font-size: 15px;
+    align-self: center;
   } 
+  
   .casita{ 
     width: 20%;
   }
-  .imagenfondo2{
-     width: 50%;
-    }
-    .imagenlogo {
-      width: 100%;
-    }
-    .encabezado1{
-      width: 100%;
-    }
-   .tablones2 {
-    width: 100%;
-  } 
-  .cuerditas2{
-    width: 100%;
-  }
-  .ingresaryregistrar{
-    width: 28%;
-  }
-  .imagenlogo{
-    width: 100%;
-  }
-  .barrainicio{
-    width: 10%;
-  }
-  .iniciohorizontal{
-    width: 10%;
-    height: 5%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .menu-vertical{
-    width: 10%;
-  }
-  .ingredientes-barra{
-    width: 10%;
-  }
-  .autores{
-    width: 10%;
-  }
-  .vacio{
-    width: 100%;
-  }
-  .imagenfondo2{
-    width: 8%;
-    margin: 0px;
-  }
-  .encabezadoRecetario{
-    width: 100%;
-  }
-  .backgroundimage2{
-    width: 100%;
-  }
- 
-}
-@media  screen and (max-width:800px) {
-
-  .receta{
-    width: 100%;
-  } 
   
-  .tituloReceta{
-    width: 85%;
-  }
-  .contenido{
-    width: 100%;
-    font-size: 9px;
-   } 
-  .imagenes2{
-    width: 85%;
-    height: auto;
-  } 
-  .casita{ 
-    width: 10%;
-  }
   .imagenfondo2{
-     width: 60%;
-     margin: 0px auto;
-    }
-    .imagenlogo {
-      width: 100%;
-    }
-    .encabezado1{
-      width: 100%;
-    }
-   .tablones2 {
-    width: 100%;
-  } 
-  .cuerditas2{
-    width: 100%;
+    width: 50%;
   }
-  .ingresaryregistrar{
-    width: 28%;
-  }
-  .imagenlogo{
-    width: 100%;
-  }
-  .barrainicio{
-    width: 10%;
-  }
-  .iniciohorizontal{
-    width: 10%;
-    height: 5%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .menu-vertical{
-    width: 10%;
-  }
-  .ingredientes-barra{
-    width: 10%;
-  }
-  .autores{
-    width: 10%;
-  }
-  .vacio{
-    width: 100%;
-  }
-  .imagenfondo2{
-    width: 100%;
-  }
-  .encabezadoRecetario{
-    width: 100%;
-  }
-  .backgroundimage2{
-    width: 100%;
-  }
- 
-}
-@media  screen and (max-width:950px) {
-
-  .receta{
-    width: 100%;
-  } 
   
-  .tituloReceta{
-    width: 85%;
+  .imagenlogo {
+     width: 100%;
   }
-  .contenido{
+  
+  .encabezado1{
     width: 100%;
-    font-size: 9px;
-   } 
-  .imagenes2{
-    width: 85%;
-    height: auto;
-  } 
-  .casita{ 
-    width: 10%;
   }
-  .imagenfondo2{
-    width: 60%;
-    margin: 0px auto;
-    }
-    .imagenlogo {
-      width: 100%;
-    }
-    .encabezado1{
-      width: 100%;
-    }
-   .tablones2 {
-    width: 100%;
-  } 
+    
   .cuerditas2{
     width: 100%;
   }
+  
   .ingresaryregistrar{
     width: 28%;
   }
+  
   .imagenlogo{
     width: 100%;
-  }
-  .barrainicio{
-    width: 10%;
-  }
-  .iniciohorizontal{
-    width: 10%;
-    height: 5%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .menu-vertical{
-    width: 10%;
-  }
-  .ingredientes-barra{
-    width: 10%;
-  }
-  .autores{
-    width: 10%;
-  }
-  .vacio{
-    width: 100%;
-  }
-  .imagenfondo2{
-    width: 100%;
-  }
-  .encabezadoRecetario{
-    width: 100%;
-  }
-  .backgroundimage2{
-    width: 100%;
-  }
- 
+  } 
+}
+@media only screen and (min-width:992px) {
+
+.ingresaryregistrar{
+  width: 40%;
+  margin-right: 40px;
+}
+
+.barrainicio{
+  height: 70px;
+  position: relative;
+}
+  
+.barrainicio .iniciohorizontal{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  right: 5%;
+  
+}
+  
+.iniciohorizontal li{
+  font-size: 25px;
+  margin-left: 10px;
+}
+  
+.menu-vertical{
+  width: 30%;
+  height: 30%;
+}
+  
+.menu-vertical li a{
+  font-size: 20px;
+}
+  
+.ingredientes-barra{
+  width: 20%;
+}
+  
+.ingredientes-barra li{
+  font-size: 20px;
+}
+  
+.autores{
+  width: 20%;
+}
+  
+.autores li{
+  font-size: 20px;
+}
+  
+.backgroundimage2{
+  width: 100%;
+  height: 250px;
+  display: flex;
+  align-items: center;
+}
+  
+.imagenfondo2{
+  margin-left: 25%;
+}
+  
+.vacio{
+  width: 100%;
+}
+  
+.encabezadoRecetario{
+  width: 100%;
+  height: 120px;
+  position: relative;
+  
+}
+  
+.textoRecetario{
+  font-size: 55px;
+  position: absolute;
+  left: 38%;
+  bottom: 5%;
+}
+  
+.tablones2 {
+  width: 100%;
+  height: 900px;
+} 
+  
+.receta{
+  width: 90%;
+  height: 700px;
+  margin-left: 20px;
+} 
+  
+.titulo-imagen{
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10%;
+}
+  
+.tituloReceta{
+  width: 85%;
+  margin-top: 50px;
+  padding-bottom: 20px;
+  font-size: 30px;
+}
+  
+.imagenes2{
+  width: 85%;
+  height: auto;
+}
+  
+.contenido{
+  width: 100%;
+  font-size: 15px;
+  align-self: center;
+} 
+  
+.casita{ 
+  width: 20%;
+}
+  
+.imagenfondo2{
+  width: 50%;
+}
+  
+.imagenlogo {
+  width: 100%;
+}
+  
+.encabezado1{
+  width: 100%;
+}
+    
+.cuerditas2{
+  width: 100%;
+}
+  
+.ingresaryregistrar{
+  width: 28%;
+}
+  
+.imagenlogo{
+  width: 100%;
+}  
 }
