--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body{
 
 .imagenlogo {
   text-align: left;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 
@@ -564,7 +566,7 @@ align-items: center;
   
 .backgroundimage2{
   width: 100%;
-  height: 250px;
+  height: 500px;
   display: flex;
   align-items: center;
 }
@@ -645,6 +647,7 @@ align-items: center;
     
 .cuerditas2{
   width: 100%;
+  height: 150px;
 }
   
 .ingresaryregistrar{
