--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
   font-size: 120%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
   Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  align-self: flex-end;
 }
 
 .imagenlogo {
@@ -70,7 +71,9 @@ body{
 .menu-vertical li a{
   display: block;
   color:rgb(255, 238, 86);
+  background-color: black;
   font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-decoration:none;
   text-align: left;
   text-align: justify;
@@ -95,6 +98,7 @@ body{
   display: block;
   color:rgb(0, 0, 0);
   font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-decoration:none;
   text-align: left;
   text-align: justify;
@@ -119,6 +123,7 @@ body{
   display: block;
   color:rgb(0, 0, 0);
   font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-decoration:none;
   text-align: left;
   text-align: justify;
@@ -267,6 +272,10 @@ align-items: center;
   font-size: 20px;
 }
 
+.menu-vertical li:hover{
+  width: 50px;
+}
+
 .ingredientes-barra{
   width: 20%;
 }
@@ -377,7 +386,7 @@ align-items: center;
 
   .ingresaryregistrar{
     width: 40%;
-    margin-right: 40px;
+    margin-right: 20px;
   
   }
   .barrainicio{
@@ -407,6 +416,10 @@ align-items: center;
     font-size: 20px;
   }
   
+  .menu-vertical li:hover{
+    width: 70px;
+  }
+
   .ingredientes-barra{
     width: 20%;
   }
@@ -517,7 +530,6 @@ align-items: center;
 
 .ingresaryregistrar{
   width: 40%;
-  margin-right: 40px;
 }
 
 .barrainicio{
@@ -546,8 +558,13 @@ align-items: center;
   
 .menu-vertical li a{
   font-size: 20px;
-}
   
+}
+
+.menu-vertical li:hover{
+  width: 100px;
+}
+
 .ingredientes-barra{
   width: 20%;
 }
@@ -608,7 +625,7 @@ align-items: center;
   height: 400px;
   display: flex;
   flex-direction: column;
-  margin-top: 10%;
+  margin-top: 5%;
 }
   
 .tituloReceta{
@@ -625,7 +642,7 @@ align-items: center;
   
 .contenido{
   width: 100%;
-  font-size: 15px;
+  font-size: 20px;
   align-self: center;
 } 
   
